<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/login_label_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp"
        android:text="@string/login_label_hint"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <com.worldline.nicolaldi.view.PinProgressView
        android:id="@+id/login_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_label_hint"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="69dp"
        app:numberOfPinItems="4"
        app:orbMargin="16dp"
        app:orbSize="12dp" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_progress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="69dp"
        android:background="@drawable/login_keyboard_background"
        android:columnCount="3"
        android:padding="16dp">

        <TextView
            android:id="@+id/login_button_1"
            style="@style/LoginKeyboardButton"
            android:text="@string/login_button_1" />

        <TextView
            android:id="@+id/login_button_2"
            style="@style/LoginKeyboardButton"
            android:text="@string/login_button_2" />

        <TextView
            android:id="@+id/login_button_3"
            style="@style/LoginKeyboardButton"
            android:text="@string/login_button_3" />

        <TextView
            android:id="@+id/login_button_4"
            style="@style/LoginKeyboardButton"
            android:text="@string/login_button_4" />

        <TextView
            android:id="@+id/login_button_5"
            style="@style/LoginKeyboardButton"
            android:text="@string/login_button_5" />

        <TextView
            android:id="@+id/login_button_6"
            style="@style/LoginKeyboardButton"
            android:text="@string/login_button_6" />

        <TextView
            android:id="@+id/login_button_7"
            style="@style/LoginKeyboardButton"
            android:text="@string/login_button_7" />

        <TextView
            android:id="@+id/login_button_8"
            style="@style/LoginKeyboardButton"
            android:text="@string/login_button_8" />

        <TextView
            android:id="@+id/login_button_9"
            style="@style/LoginKeyboardButton"
            android:text="@string/login_button_9" />

        <ImageView
            android:id="@+id/login_button_backspace"
            style="@style/LoginKeyboardButton"
            android:layout_marginTop="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_backspace" />

        <TextView
            android:id="@+id/login_button_0"
            style="@style/LoginKeyboardButton"
            android:layout_marginTop="10dp"
            android:text="@string/login_button_0" />

        <TextView
            android:id="@+id/login_button_ok"
            style="@style/LoginKeyboardButton"
            android:layout_marginTop="6dp"
            android:text="@string/login_button_ok"
            android:textColor="@color/login_keyboard_accent"
            android:textSize="18sp" />

    </GridLayout>

    <com.worldline.nicolaldi.view.SignatureView
        android:id="@+id/testtest"
        android:layout_width="600dp" android:background="@android:color/white"
        android:layout_height="300dp"/>

</RelativeLayout>